--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-
+# Default ignored files
+/shelf/
+/workspace.xml
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# App specific
+login_app/.packages
 login_app/.flutter-plugins-dependencies
+login_app/.dart_tool/package_config.json
