--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 # App specific
 login_app/.packages
 login_app/.flutter-plugins-dependencies
+login_app/.flutter-plugins
 login_app/.dart_tool/
 .idea/workspace.xml
 login_app/build/
