--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ login_app/.dart_tool/
 .idea/workspace.xml
 login_app/build/
 .idea/vcs.xml
+.idea/libraries/Dart_Packages.xml
+.idea/libraries/Dart_SDK.xml
