--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+4
   provider: ^5.0.0
+  # mockito: ^5.0.7
+  # build_runner: ^1.11.0 #Needed for mockito
   url_launcher:
 
 
