--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   mongo_dart: ^0.5.0+1
 
+  dependencies:
+     mongo_dart: ^0.7.0+2
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
