--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   # mockito: ^5.0.7
   # build_runner: ^1.11.0 #Needed for mockito
   url_launcher:
-
+  firebase_core: "^0.7.0"
+  firebase_auth: "^0.20.1"
+  cloud_firestore: "^0.16.0+1"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
