--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -25,16 +25,17 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+4
   provider: ^5.0.0
+  # mockito: ^5.0.7
+  # build_runner: ^1.11.0 #Needed for mockito
   url_launcher:
-
+  firebase_core: "^0.7.0"
+  firebase_auth: "^0.20.1"
+  cloud_firestore: "^0.16.0+1"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   postgres: ^2.2.0
-
-
-
 
 dev_dependencies:
   flutter_test:
