--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -42,10 +42,18 @@ jobs:
     #  working-directory: login_app
     #  run: flutter analyze .
     
-    # Run widget tests for our flutter project.
-    - name: Run tests
+    # Run tests for our flutter project.
+    - name: Run frontend tests
       working-directory: login_app
-      run: flutter test
+      run: flutter test test/screens/
+    
+    - name: Run announcement unit tests
+      working-directory: login_app
+      run: flutter test test/announcement/announcement_unit_test.dart
+
+    - name: Run user unit tests
+      working-directory: login_app
+      run: flutter test test/user/user_unit_test.dart
     
     # Build apk.
     # - run: flutter build apk
