--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   postgres: ^2.2.0
   pdf: ^3.4.2
+  path_provider: ^2.0.2 # Needed to save a PDF to a PC from the web app
+  downloads_path_provider: ^0.1.0 # Needed to save a PDF to a device from the mobile app
+  universal_html: ^2.0.8
 
 dev_dependencies:
   flutter_test:
