--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -65,6 +65,10 @@ flutter:
   assets:
     - assets/placeholder.com-logo1.png
     - assets/bg.jpg
+    - assets/OpenSans-Regular.ttf
+    - assets/OpenSans-Bold.ttf
+    - assets/OpenSans-Italic.ttf
+    - assets/OpenSans-BoldItalic.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
