--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   downloads_path_provider: ^0.1.0 # Needed to save a PDF to a device from the mobile app
   universal_html: ^2.0.8 # Needed to save a PDF to a device from the PC web app
   mockito: ^5.0.12
+  mailer: ^3.3.0
+  mailer2: ^1.2.5
 
 dev_dependencies:
   flutter_test:
