--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -37,11 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   postgres: ^2.2.0
   pdf: ^3.4.2
-  downloads_path_provider: ^0.1.0 # Needed to save a PDF to a device from the mobile app
-  universal_html: ^2.0.8 # Needed to save a PDF to a device from the PC web app
+  downloads_path_provider: ^0.1.0 # Needed to save a PDF to a device from a mobile device
+  universal_html: ^2.0.8 # Needed to save a PDF to a device from a PC
   mockito: ^5.0.12
   mailer: ^3.3.0
   mailer2: ^1.2.5
+  file_picker: ^2.1.7
 
 dev_dependencies:
   flutter_test:
