--- a/login_app/coviduous-api/functions/package.json
+++ b/login_app/coviduous-api/functions/package.json
@@ -13,8 +13,10 @@
     "node": "8"
   },
   "dependencies": {
+    "firebase": "^8.8.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.0"
+    "firebase-functions": "^3.6.0",
+    "tools": "0.0.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
