--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,11 @@
 # Editor-based HTTP Client requests
 /httpRequests/
 # App specific
-login_app/.packages
-login_app/.flutter-plugins-dependencies
-login_app/.flutter-plugins
-login_app/.dart_tool/
-login_app/lib/generated_plugin_registrant.dart
+coviduous/.packages
+coviduous/.flutter-plugins-dependencies
+coviduous/.flutter-plugins
+coviduous/.dart_tool/
+coviduous/lib/generated_plugin_registrant.dart
 .idea/workspace.xml
 login_app/build/
 .idea/
