--- a/backend/firebase.json
+++ b/backend/firebase.json
@@ -13,10 +13,22 @@
       "port": 8080
     },
     "pubsub": {
-      "port": 8085
+      "port": 7085
     },
     "ui": {
       "enabled": true
+    },
+    "database": {
+      "port": 9000
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "storage": {
+      "port": 9199
     }
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
