--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -15,8 +15,13 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.21.1",
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "firebase-admin": "^9.11.0",
+    "firebase-functions": "^3.14.1",
+    "jwks-rsa": "^2.0.4",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "chai": "^4.3.4",
