--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -22,6 +22,7 @@
     "express-jwt": "^6.0.0",
     "firebase-admin": "^9.11.0",
     "firebase-functions": "^3.14.1",
+    "firebase-tools": "^9.16.0",
     "jwks-rsa": "^2.0.4",
     "node-fetch": "^2.6.1"
   },
