--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,4 @@ node_modules/
 backend/functions/node_modules
 backend/functions/.env
 backend/functions/permissions.json
+backend/functions/ui-debug.log
