--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -71,25 +71,25 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/placeholder.com-logo1.png
+    - assets/images/city-silhouette.png
+    - assets/images/logo.png
     - assets/sample.pdf
-    - assets/bg.jpg
   # PDF fonts
-    - assets/OpenSans-Regular.ttf
-    - assets/OpenSans-Bold.ttf
-    - assets/OpenSans-Italic.ttf
-    - assets/OpenSans-BoldItalic.ttf
+    - assets/fonts/OpenSans-Regular.ttf
+    - assets/fonts/OpenSans-Bold.ttf
+    - assets/fonts/OpenSans-Italic.ttf
+    - assets/fonts/OpenSans-BoldItalic.ttf
 
   fonts:
     - family: OpenSans
       fonts:
-        - asset: assets/OpenSans-Regular.ttf
-        - asset: assets/OpenSans-Bold.ttf
-        - asset: assets/OpenSans-Italic.ttf
+        - asset: assets/fonts/OpenSans-Regular.ttf
+        - asset: assets/fonts/OpenSans-Bold.ttf
+        - asset: assets/fonts/OpenSans-Italic.ttf
     - family: Poppins
       fonts:
-        - asset: assets/Poppins-Regular.ttf
-        - asset: assets/Poppins-Bold.ttf
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
