--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -28,6 +28,7 @@
     "firebase": "^8.9.0",
     "firebase-admin": "^9.11.0",
     "firebase-functions": "^3.14.1",
+    "firebase-mock": "^2.3.2",
     "firebase-tools": "^9.16.0",
     "jwks-rsa": "^2.0.4",
     "node-fetch": "^2.6.1",
