--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -43,17 +43,9 @@ jobs:
     #  run: flutter analyze .
     
     # Run tests for our flutter project.
-    - name: Run frontend tests
-      working-directory: frontend
-      run: flutter test test/screens/
-    
-    - name: Run announcement unit tests
-      working-directory: frontend
-      run: flutter test test/announcement/announcement_unit_test.dart
-
-    - name: Run user unit tests
-      working-directory: frontend
-      run: flutter test test/user/user_unit_test.dart
+    # - name: Run tests
+    #  working-directory: frontend
+    #  run: flutter test test/
     
     # Build apk.
     # - run: flutter build apk
