--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Coviduous
+name: frontend
 description: Floor plan and booking management system.
 
 # The following line prevents the package from being accidentally published to
