--- a/frontend/ios/Flutter/Generated.xcconfig
+++ b/frontend/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=E:\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Rudi\Documents\GitHub\Coviduous\frontend
+FLUTTER_ROOT=C:\Users\cleme\Desktop\src\flutter_windows_2.2.3-stable\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\cleme\IdeaProjects\Coviduous\frontend
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
