added office mocha test script

--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -13,6 +13,7 @@
     "testUserWithExit": "mocha './tests/user/*.test.js' --timeout 5000 --exit",
     "testAnnouncement": "mocha './tests/announcement/*.test.js'",
     "testNotification": "mocha './tests/notification/*.test.js'",
+    "testOffice": "mocha './tests/office/*.test.js'",
     "testFloorPlan": "mocha './tests/floorplan/*.test.js'"
   },
   "engines": {
