--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -14,6 +14,7 @@
     "testAnnouncement": "mocha './tests/announcement/*.test.js'",
     "testNotification": "mocha './tests/notification/*.test.js'",
     "testOffice": "mocha './tests/office/*.test.js'",
+    "testShift": "mocha './tests/shift/*.test.js'",
     "testFloorPlan": "mocha './tests/floorplan/*.test.js'"
   },
   "engines": {
