--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -12,7 +12,7 @@
     "testUser": "mocha './tests/user/*.test.js' --timeout 5000",
     "testUserWithExit": "mocha './tests/user/*.test.js' --timeout 5000 --exit",
     "testAnnouncement": "mocha './tests/announcement/*.test.js'",
-    "testNotification": "mocha './tests/notification/*.test.js'",
+    "testNotification": "mocha './tests/notification/*.test.js' --timeout 10000",
     "testOffice": "mocha './tests/office/*.test.js'",
     "testShift": "mocha './tests/shift/*.test.js'",
     "testFloorPlan": "mocha './tests/floorplan/*.test.js'"
