--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -42,8 +42,8 @@ jobs:
     #  working-directory: login_app
     #  run: flutter analyze .
     
-     Run tests for our flutter project.
-     - name: Run tests
+    # Run tests for our flutter project.
+    - name: Run tests
       working-directory: frontend
       run: flutter test test/
     
