Complete overhaul of health check page
The user health check page is now more intuitive to use and better looking. I will update the visitor health check page soon, too.

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -76,6 +76,9 @@ flutter:
     - assets/images/city-silhouette.png
     - assets/images/logo.png
     - assets/images/placeholder-profile-image.png
+    - assets/images/sick1.jpg
+    - assets/images/sick2.jpg
+    - assets/images/sick3.jpg
     - assets/sample.pdf
   # PDF fonts
     - assets/fonts/OpenSans-Regular.ttf
