--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/images/city-silhouette.png
     - assets/images/logo.png
     - assets/images/placeholder-profile-image.png
+    - assets/images/coffee1.jpg
     - assets/images/sick1.jpg
     - assets/images/sick2.jpg
     - assets/images/sick3.jpg
