--- a/backend/firebase.json
+++ b/backend/firebase.json
@@ -10,19 +10,22 @@
       "port": 5002
     },
     "firestore": {
-      "port": 8080
+      "port": 8082
     },
     "ui": {
       "enabled": true
     },
     "database": {
-      "port": 9000
+      "port": 9002
     },
     "hosting": {
       "port": 5000
     },
     "storage": {
       "port": 9199
+    },
+    "pubsub": {
+      "port": 8083
     }
   },
   "storage": {
