--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   random_string: ^2.3.1
   syncfusion_flutter_charts: ^19.2.57
   flutter_webrtc: ^0.6.5 # Needed to implement video conferencing
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
