Added functionality to save a QR code
The view permissions pages for users and visitors are now able to save a QR code for cases where access to a building was granted.

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - assets/images/logo.png
     - assets/images/placeholder-profile-image.png
     - assets/images/coffee1.jpg
+    - assets/images/icons8-denied-48.png
     - assets/images/sick1.jpg
     - assets/images/sick2.jpg
     - assets/images/sick3.jpg
