Made the modify floors screen match the floor plans screen

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/images/city-silhouette.png
     - assets/images/logo.png
     - assets/images/placeholder-office-building.png
+    - assets/images/placeholder-office-floor.png
     - assets/images/placeholder-office-room.png
     - assets/images/placeholder-profile-image.png
     - assets/images/coffee1.jpg
