--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -78,11 +78,14 @@ flutter:
   assets:
     - assets/images/city-silhouette.png
     - assets/images/logo.png
+    - assets/images/placeholder-announcement.png
+    - assets/images/placeholder-notification.png
     - assets/images/placeholder-office-building.png
     - assets/images/placeholder-office-floor.png
     - assets/images/placeholder-office-room.png
     - assets/images/placeholder-profile-image.png
     - assets/images/placeholder-shift.png
+    - assets/images/warning-icon.png
     - assets/images/coffee1.jpg
     - assets/images/sick1.jpg
     - assets/images/sick2.jpg
