--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
     - assets/images/placeholder-office-building.png
     - assets/images/placeholder-office-floor.png
     - assets/images/placeholder-office-room.png
+    - assets/images/placeholder-pdf.png
     - assets/images/placeholder-profile-image.png
     - assets/images/placeholder-shift.png
     - assets/images/warning-icon.png
