--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   qr_flutter: ^4.0.0
   flutter_typeahead: ^3.2.0
   jitsi_meet: ^4.0.0 # Needed to implement video conferencing
+  avatar_glow: ^2.0.1
 
 dev_dependencies:
   flutter_test:
