Added icon for the admin permission requests screen

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
     - assets/images/placeholder-office-room.png
     - assets/images/placeholder-pdf.png
     - assets/images/placeholder-profile-image.png
+    - assets/images/placeholder-request-icon.png
     - assets/images/placeholder-shift.png
     - assets/images/warning-icon.png
     - assets/images/coffee1.jpg
