--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -94,7 +94,7 @@ flutter:
     - assets/images/sick1.jpg
     - assets/images/sick2.jpg
     - assets/images/sick3.jpg
-    - assets/images/Coviduous tutorials general - using the app.png
+    - assets/images/Coviduous_tutorials_using_the_app.png
     - assets/sample.pdf
     - assets/za-covid-guidelines.pdf
   # PDF fonts
