--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.frontend"
+    package="com.coviduous"
     xmlns:tools="http://schemas.android.com/tools">
    <application
         tools:replace="android:label"
-        android:label="frontend"
+        android:label="coviduous"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
