--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   build_runner: ^2.0.6
   random_string: ^2.3.1
 
+dependency_overrides:
+  photo_view: ^0.12.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
