--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   jitsi_meet: ^4.0.0 # Needed to implement video conferencing
   avatar_glow: ^2.0.1
 
+dependency_overrides:
+  photo_view: ^0.12.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
