--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,6 @@ backend/functions/node_modules
 backend/functions/.env
 backend/functions/permissions.json
 backend/functions/ui-debug.log
+
+# sonar-scanner
+.scannerwork/
