Added more images for the health checks

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -97,6 +97,17 @@ flutter:
     - assets/images/sick1.jpg
     - assets/images/sick2.jpg
     - assets/images/sick3.jpg
+    - assets/images/sick4.jpg
+    - assets/images/sick5.jpg
+    - assets/images/sick6.jpg
+    - assets/images/sick7.jpg
+    - assets/images/sick8.jpg
+    - assets/images/sick9.jpg
+    - assets/images/sick10.jpg
+    - assets/images/sick11.jpg
+    - assets/images/sick12.jpg
+    - assets/images/sick13.jpg
+    - assets/images/sick14.jpg
     - assets/images/Coviduous_tutorials_using_the_app.png
     - assets/sample.pdf
     - assets/za-covid-guidelines.pdf
