--- a/.github/workflows/firebase-functions.yml
+++ b/.github/workflows/firebase-functions.yml
@@ -3,10 +3,7 @@ name: Firebase Functions CD
 on:
   push:
     branches: [ master ]
-    paths: "backend/deployable_functions/**"
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    paths: [ "backend/deployable_functions/**" ]
   
 defaults:
   run:
@@ -21,6 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: install dependencies
         run: npm install
+        working-directory: backend/deployable_functions
       - name: Deploy to Firebase Functions
         uses: w9jds/firebase-action@master
         with:
