--- a/.github/workflows/firebase-functions.yml
+++ b/.github/workflows/firebase-functions.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ master ]
     paths: [ "backend/deployable_functions/**" ]
+    
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
   
 defaults:
   run:
