--- a/.github/workflows/firebase-functions.yml
+++ b/.github/workflows/firebase-functions.yml
@@ -28,3 +28,4 @@ jobs:
           args: deploy --only functions
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          PROJECT_PATH: "./backend/deployable_functions"
