--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   flutter_typeahead: ^3.2.0
   jitsi_meet: ^4.0.0 # Needed to implement video conferencing
   avatar_glow: ^2.0.1
+  googleapis: ^5.0.1
+  googleapis_auth: ^1.1.0
 
 dependency_overrides:
   photo_view: ^0.12.0
