--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   avatar_glow: ^2.0.1
   googleapis: ^5.0.1
   googleapis_auth: ^1.1.0
+  nearby_connections: ^3.1.0
 
 dependency_overrides:
   photo_view: ^0.12.0
