--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  postgres: ^2.2.0
   pdf: ^3.4.2
   downloads_path_provider: ^0.1.0 # Needed to save a PDF to a device from a mobile device
   universal_html: ^2.0.8 # Needed to save a PDF to a device from a PC
@@ -55,6 +54,8 @@ dependencies:
   googleapis: ^5.0.1
   googleapis_auth: ^1.1.0
   nearby_connections: ^3.1.0
+  beacon_broadcast: ^0.2.3
+  uuid: ^3.0.4
 
 dependency_overrides:
   photo_view: ^0.12.0
