--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   avatar_glow: ^2.0.1
   googleapis: ^5.0.1
   googleapis_auth: ^1.1.0
+  nearby_connections: ^3.1.0
+  beacon_broadcast: ^0.2.3
+  uuid: ^3.0.4
+  onesignal_flutter: ^2.6.3
 
 dependency_overrides:
   photo_view: ^0.12.0
