Fixed a bug where the app wouldn't build on mobile

--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -21,6 +21,18 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+buildscript {
+    repositories {
+        // ...
+        maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal
+    }
+    dependencies {
+        // ...
+        // OneSignal-Gradle-Plugin
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.6, 0.99.99]'
+    }
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
@@ -47,6 +59,11 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
+        manifestPlaceholders = [
+                onesignal_app_id: 'db07da80-4ecf-4f74-9ce8-a8437c6c4c88',
+                // Project number pulled from dashboard, local value is ignored.
+                onesignal_google_project_number: '873047711437'
+        ]
     }
 
     buildTypes {
